style.css
:root{
    --alt-bg: hsl(0, 0%, 9%);
}

*{
    margin: 0;
    box-sizing: border-box;
}

body{
    background: black;
    color: hsl(0, 0%, 90%);
    font-family: 'RobotoRegular';
    width: 100%;
    height: 100vh;
}

a{
    color: currentColor;
    font-weight: bold;
}

button, .inputfile-label{
    color: currentColor;
    background: var(--alt-bg);
    border: 2px solid transparent;
    padding: .4rem .2rem;
}

button:hover, .inputfile-label:hover {
    background: var(--alt-bg);
    border: 2px solid hsl(0, 0%, 17%);
}

/* LOGIN */
.login-section, .mobile{
    display: grid;
    place-content: center;
    text-align: center;
    width: 100%;
    height: 100vh;
}

.login-logo{
    color: red;
    font-size: 5rem;
    margin-bottom: 3rem;
}

.name{
    font-size: 3.5rem;
    text-transform: uppercase;
}

.login-form {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    margin-top: 3rem;
}

.login-put{
    width: 400px;
}

.login-put, .input-bar {
    border: 2px solid transparent;
    background: var(--alt-bg);
    color: currentColor;
    font-size: 1rem;
    outline: none;
    line-height: 200%;
    padding-left: 0.5rem;
}

.login-put:focus, .input-bar:focus{
    border: 2px solid hsl(0, 0%, 16%);
}

/* APP */
#logged {
    flex-direction: column;
    align-items: flex-start;
    height: 100vh;
}

header{
    width: 100%;
    height: 3.5rem;
    /* display: flex; */
    display: none;
    justify-content: space-between;
    border-bottom: 1px solid hsl(0, 0%, 30%);
    padding: 0 1rem;
}

header .left, header .right{
    display: flex;
    align-items: center;
    gap: 1rem;
}

.header-logo{
    color: red;
}

header .status{
    color: red;
}

main{
    width: 100%;
    height: 100%;
    display: flex;
}

#central {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex: auto;
}

.central-header{
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 1rem;
    background: var(--alt-bg);
    padding: .7rem;
}

.central-header .left{
    display: flex;
    align-items: center;
    gap: 1rem;
}

.central-header .left select{
    background: transparent;
    border: none;
    color: currentColor;
    padding: .2rem .5rem;
    font-size: 1.2em;
}

.central-header details summary{
    color: hsl(0,0%,45%);
    cursor: default;
    user-select: none;
}

.channelDesc{
    background: var(--alt-bg);
    position: absolute;
    padding: 1rem;
}

.messagecont,
.message {
    display: block;
}

.messagecont {
    padding-bottom: 5px;
    max-width: 80% !important;
}

.msg-content{
    color: hsl(0, 0%, 65%);
    word-wrap: anywhere;
}

#author {
    color: hsl(0, 0%, 90%);
    display: inline-block;
    padding-top: 10px;
}

#replymsg {
    display: block;
    width: 700px;
    font-size: smaller;
    font-style: italic;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

#closereply {
    display: none
}

#messages {
    font-size: 1em;
    overflow: auto;
    backface-visibility: hidden;
    padding: 0 1rem;
    flex: auto;
}

#messagebar{
    width: 100%;
    display:flex;
}

.input-bar{
    flex: auto;
}

/* .inputfile { */
/*     width: 0.1px; */
/*     height: 0.1px; */
/*     opacity: 0; */
/*     overflow: hidden; */
/*     position: absolute; */
/*     z-index: -1; */
/* } */

img {
    max-width: 600px;
}

/* MOBILE */
.mobile{
    display: none;
}

@media screen and (max-width: 650px) {
    .mobile{
        display: grid;
    }

    .login-section{
        display: none;
    }

    #logged{
        display: none;
    }
}

